<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="76dp"
        android:paddingLeft="35dp"
        android:paddingRight="35dp">
        <ImageView android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="30dp"
            android:layout_alignLeft="@+id/passwordInput"
            android:layout_alignStart="@+id/passwordInput"
            >
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="Email"
                android:ems="10"
                android:id="@+id/TextField_email"
                android:layout_alignParentTop="true"
                android:layout_alignLeft="@+id/TextField_password"
                android:layout_alignStart="@+id/TextField_password"
                android:layout_marginTop="110dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_below="@+id/emailInput"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:textColorPrimary="@color/iron"
            android:textColorHint="@color/iron"
            >
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/TextField_password"
                android:hint="Password"
                android:layout_below="@+id/TextField_email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/B_signIn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Sign In"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:layout_below="@+id/passwordInput"
            android:onClick="onButtonClick"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="24dp"
            />
    </LinearLayout>

</RelativeLayout>
