<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/accent_material_light">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Name"
        android:textAllCaps="true"
        android:id="@+id/Text_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textColor="@color/abc_primary_text_disable_only_material_dark" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/task_lists"
        android:id="@+id/Text_taskLists"
        android:layout_below="@+id/Text_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textColor="@color/abc_primary_text_disable_only_material_dark" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/List_groups"
        android:layout_below="@+id/Text_taskLists"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/B_addNewList"
        android:choiceMode="singleChoice"
        android:layout_marginTop="20dp"
        android:background="@color/accent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add List"
            android:id="@+id/B_addNewList"
            android:onClick="onButtonClick"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_weight="1"/>



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Go To Last List"
            android:id="@+id/toList"
            android:layout_below="@+id/List_groups"
            android:layout_toRightOf="@+id/B_createNewList"
            android:layout_toEndOf="@+id/B_createNewList"
            android:onClick="goToList"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_list"
            android:id="@+id/B_createNewList"
            android:onClick="onButtonClick"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
