<resources>
    <string name="app_name">CSE110 TaskList</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="main_name">Task List App</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>

    <string name="developed_by"><u>Developed by</u></string>
    <string name="dev_1">Manaf Alajmi</string>
    <string name="dev_2">Nikola Gargov</string>
    <string name="dev_3">John Hurst</string>
    <string name="dev_4">Abhishek Kumar</string>
    <string name="dev_5">Neil Sengupta</string>
    <string name="dev_6">Steven Zheng</string>

    <string name="task_lists">Task Lists</string>
    <string name="create_new_list">Create List</string>
    <string name="create_task_list">Create Task List</string>
    <string name="title_activity_task_editor">TaskEditor</string>
    <string name="members_text">Members</string>
</resources>
